ajustando nome do banco

--- a/lunna/src/main/resources/application.properties
+++ b/lunna/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=lunna
-spring.datasource.url=jdbc:mysql://localhost:5432/lunnna
+spring.datasource.url=jdbc:mysql://localhost:5432/lunna
 spring.datasource.username=postgres
 spring.datasource.password=123
 
