--- a/lunna/src/main/resources/application.properties
+++ b/lunna/src/main/resources/application.properties
@@ -1,9 +1,17 @@
 spring.application.name=lunna
-spring.datasource.url=jdbc:mysql://localhost:5432/lunna
+
+# ==========================
+# POSTGRESQL
+# ==========================
+spring.datasource.url=jdbc:postgresql://localhost:5432/lunna
 spring.datasource.username=postgres
 spring.datasource.password=123
-
-spring.jpa.hibernate.ddl-auto=update
 spring.datasource.driver-class-name=org.postgresql.Driver
 
-
+# ==========================
+# JPA / HIBERNATE
+# ==========================
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
